Captcha Validation to add comments.

--- a/SimpleBlog/Todo.txt
+++ b/SimpleBlog/Todo.txt
@@ -1,3 +1,4 @@
 ﻿TODO: Make Partial Views for the indexes
 Change master page so links go to category/post
 Add real security
+Move Scripts for Embedded Form
