Cleaned up Category Index and Detail View

--- a/SimpleBlog/Todo.txt
+++ b/SimpleBlog/Todo.txt
@@ -1,4 +1,5 @@
-﻿TODO: Make Partial Views for the indexes
+﻿Make Partial Views for the indexes
 Change master page so links go to category/post
-Add real security
 Move Scripts for Embedded Form
+Auto Tests
+Move New Comment Form to other side
